Bump AGP to 8.1.0 (#236)
* Update dependency com.android.tools.build:gradle to v8

* Use JVM 20 for tests

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: hfhbd <hfhbd@users.noreply.github.com>